envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: index_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: burgers_backend
                      domains: ["*"]
                      routes:
                        - name: basket
                          match:
                            prefix: "/api/basket"
                          route:
                            prefix_rewrite: "/api/basket"
                            cluster: burgers.basket.api
                        - name: orders
                          match:
                            prefix: "/api/orders"
                          route:
                            prefix_rewrite: "/api/orders"
                            cluster: burgers.ordering.api
                upgrade_configs:
                  - upgrade_type: websocket
                http_filters:
                  - name: envoy.filters.http.oauth2
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3alpha.OAuth2
                      config:
                        token_endpoint:
                          cluster: keycloak
                          uri: http://127.0.0.1:8080/auth/realms/master/protocol/openid-connect/token
                          timeout: 5s
                        authorization_endpoint: http://127.0.0.1:8080/auth/realms/master/protocol/openid-connect/auth
                        redirect_uri: "http://%REQ(:authority)%/callback"
                        redirect_path_matcher:
                          path:
                            exact: /callback
                        signout_path:
                          path:
                            exact: /signout
                        credentials:
                          client_id: "burger-shop"
                          token_secret:
                            name: token
                            sds_config:
                              path: "/etc/envoy/token-secret.yaml"
                          hmac_secret:
                            name: hmac
                            sds_config:
                              path: "/etc/envoy/hmac-secret.yaml"
                        auth_scopes:
                          - openid
                          - profile
                          - email
                          - roles
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        oidc_provider:
                          issuer: http://kubernetes.docker.internal:8080/auth/realms/master
                          audiences:
                            - master-realm
                            - account
                          payload_in_metadata: jwt_payload
                          forward_payload_header: x-jwt-payload
                          remote_jwks:
                            http_uri:
                              uri: http://127.0.0.1:8080/auth/realms/master/protocol/openid-connect/certs
                              cluster: keycloak
                              timeout: 5s
                      rules:
                        - match:
                            prefix: /api
                          requires:
                            requires_any:
                              requirements:
                                - provider_name: oidc_provider
                                - allow_missing_or_failed: {}

                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                        function envoy_on_request(request_handle)
                          local payload = request_handle:streamInfo():dynamicMetadata():get("envoy.filters.http.jwt_authn")["jwt_payload"]
                          request_handle:headers():add("jwt-extracted-sub", payload.sub)
                        end
                        function envoy_on_response(response_handle)
                        end
                  - name: envoy.router

  clusters:
    - name: keycloak
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: keycloak
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: keycloak, port_value: 8080 }

    - name: burgers.basket.api
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: burgers.basket.api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      { address: burgers.basket.api, port_value: 80 }

    - name: burgers.ordering.api
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: burgers.ordering.api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      { address: burgers.ordering.api, port_value: 80 }
